--- a/web/index.html
+++ b/web/index.html
@@ -34,5 +34,30 @@
 </head>
 <body>
   <script src="flutter_bootstrap.js" async></script>
+
+  <script type="module">
+  // Import the functions you need from the SDKs you need
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/12.8.0/firebase-app.js";
+  import { getAnalytics } from "https://www.gstatic.com/firebasejs/12.8.0/firebase-analytics.js";
+  // TODO: Add SDKs for Firebase products that you want to use
+  // https://firebase.google.com/docs/web/setup#available-libraries
+
+  // Your web app's Firebase configuration
+  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+  const firebaseConfig = {
+    apiKey: "AIzaSyBjQmsXMfYJPgCMfEipNGp3NjMlLF3HYTo",
+    authDomain: "poker-mates.firebaseapp.com",
+    projectId: "poker-mates",
+    storageBucket: "poker-mates.firebasestorage.app",
+    messagingSenderId: "884985680972",
+    appId: "1:884985680972:web:9cbd9e65ea8e91606250e9",
+    measurementId: "G-CSJZ7GR2VD"
+  };
+
+  // Initialize Firebase
+  const app = initializeApp(firebaseConfig);
+  const analytics = getAnalytics(app);
+</script>
+
 </body>
 </html>
